--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "license": "ISC",
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "ramda": "^0.26.1"
+    "cross-env": "^5.2.0"
   },
   "keywords": [],
   "author": "",
